k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: saldos-api
  labels:
    app: saldos
spec:
  selector:
    app: saldos
    component: api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
